ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kube-vote.info
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: vote
            port:
              number: 5000
      - pathType: Prefix
        path: /result
        backend:
          service: 
            name: result
            port:
              number: 5001
